# mozjpeg-rs

./: .gitignore  API_IMPROVEMENT_NOTES.md  CHANGELOG.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  ENTROPY_OPTIMIZATION_NOTES.md  FEEDBACK.md  LICENSE  OPTIMIZE_SCANS_PARITY.md  README.md  SAFETY_REVIEW.md  SIMD_SPEEDUP_NOTES.md  SIMD_TRACKING.md  THIRD-PARTY-LICENSES  codecov.yml  justfile  scans-lq.md
.cargo/: config.toml
.github/workflows/: ci.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benches/: color.rs  dct.rs  encode.rs  entropy.rs
benchmark/: Dockerfile  benchmark_results.csv  plot_pareto.py
crates/sys-local/: Cargo.toml
crates/sys-local/src/: lib.rs
docs/: SCAN_OPTIMIZATION_ANALYSIS.md  SCAN_OPTIMIZATION_PLAN.md
docs/public-api/: ABLATION-mozjpeg-rs.md  mozjpeg-rs.features.txt  mozjpeg-rs.internal.txt  mozjpeg-rs.txt
examples/: bench_entropy.rs  benchmark_corpus.rs  check_c_scans.rs  cid22_bench.rs  compare_ac_refine.rs  compare_color_precision.rs  compare_huffman.rs  compare_outputs.rs  compare_real_images.rs  compare_scan_configs.rs  comprehensive_benchmark.rs  comprehensive_comparison.rs  corpus_full_comparison.rs  debug_chroma.rs  debug_color_avx2.rs  debug_data26.rs  debug_dct.rs  debug_decode.rs  debug_full_dct.rs  debug_rust_vs_c.rs  debug_small_image.rs  decoder_boundary_detail.rs  decoder_boundary_test.rs  decoder_chroma_analysis.rs  decoder_roundtrip.rs  deringing_gap_test.rs  encode_permutations.rs  exhaustive_parity.rs  force_al1_test.rs  force_sa.rs  full_corpus_test.rs  full_quality_comparison.rs  kodak_full_comparison.rs  multipass_test.rs  non_trellis_gap.rs  opt_scans_test.rs  optimize_scans_debug.rs  pareto_benchmark.rs  profile_compare.rs  profile_dct.rs  (+20 more)
mozjpeg/: Cargo.toml
mozjpeg-oxide/: README.md
mozjpeg-oxide/examples/: pareto_benchmark.rs
mozjpeg/examples/: benchmark.rs  compare_c_rust.rs  debug_edge_padding.rs  debug_rust_vs_c.rs  encode_permutations.rs  test_444.rs  test_block_compare.rs  test_edge_cropping.rs  verify_scans.rs
mozjpeg/src/: encode.rs  entropy.rs  huffman.rs  lib.rs  marker.rs  progressive.rs  sample.rs  scan_optimize.rs  test_encoder.rs  trellis.rs  types.rs
mozjpeg/tests/: codec_comparison.rs  encoder_validation.rs
mozjpeg/tests/images/encoded/: .gitignore
scripts/: fetch-corpus.sh  run_historical_benchmarks.sh  test-all.sh
src/: bitstream.rs  codec.rs  color.rs  color_avx2.rs  compat.rs  consts.rs  corpus.rs  dct.rs  deringing.rs  encode.rs  entropy.rs  error.rs  fast_entropy.rs  huffman.rs  imgref_ext.rs  lib.rs  marker.rs  progressive.rs  quant.rs  scan_optimize.rs  scan_trial.rs  smooth.rs  test_encoder.rs  trellis.rs  types.rs  zennode_defs.rs
src/encode/: helpers.rs  streaming.rs
src/simd/: mod.rs  scalar.rs
src/simd/aarch64/: mod.rs  neon.rs
src/simd/x86_64/: avx2.rs  entropy.rs  mod.rs
tests/: bench_2k.rs  benchmark_runner.rs  block_comparison.rs  chroma_quality_test.rs  codec_comparison.rs  corpus_comparison.rs  corpus_validation.rs  edge_cropping.rs  edge_padding.rs  encode_tests.rs  encoder_validation.rs  ffi_comparison.rs  ffi_validation.rs  known_issues.rs  parity_benchmark.rs  parity_tests.rs  pixel_diff_analysis.rs  preset_parity.rs  progressive_comparison.rs  public_api_doc.rs  q95_final_comparison.rs  scan_verification.rs  subsampling_444.rs  timing_breakdown.rs  trellis_validation.rs
tests/benchmark_tracking/: CONFIG.md
tests/benchmark_tracking/results/: c-mozjpeg_baseline_c-mozjpeg-baseline.json  c-mozjpeg_c-mozjpeg-baseline.json  c-mozjpeg_max_compression_c-mozjpeg-max_compression.json  c-mozjpeg_progressive_c-mozjpeg-progressive.json  mozjpeg-oxide_531b4d9.json  mozjpeg-oxide_7e507c8.json  mozjpeg-oxide_97f1602.json  mozjpeg-oxide_aadc899.json  mozjpeg-oxide_baseline_24a6892.json  mozjpeg-oxide_baseline_44de503.json  mozjpeg-oxide_baseline_70cf3e2.json  mozjpeg-oxide_baseline_8c7f411.json  mozjpeg-oxide_baseline_9189ee6.json  mozjpeg-oxide_baseline_a7b2fee.json  mozjpeg-oxide_baseline_b9805cf.json  mozjpeg-oxide_baseline_cb83e2e.json  mozjpeg-oxide_baseline_d2acd44.json  mozjpeg-oxide_baseline_e14d3b0.json  mozjpeg-oxide_baseline_e2bee9e.json  mozjpeg-oxide_baseline_f78fdae.json  mozjpeg-oxide_max_compression_24a6892.json  mozjpeg-oxide_max_compression_44de503.json  mozjpeg-oxide_max_compression_70cf3e2.json  mozjpeg-oxide_max_compression_8c7f411.json  mozjpeg-oxide_max_compression_9189ee6.json  mozjpeg-oxide_max_compression_a7b2fee.json  mozjpeg-oxide_max_compression_b9805cf.json  mozjpeg-oxide_max_compression_cb83e2e.json  mozjpeg-oxide_max_compression_d2acd44.json  mozjpeg-oxide_max_compression_e14d3b0.json  mozjpeg-oxide_max_compression_e2bee9e.json  mozjpeg-oxide_max_compression_f1edce5.json  mozjpeg-oxide_max_compression_f78fdae.json  mozjpeg-oxide_progressive_24a6892.json  mozjpeg-oxide_progressive_44de503.json  mozjpeg-oxide_progressive_70cf3e2.json  mozjpeg-oxide_progressive_8c7f411.json  mozjpeg-oxide_progressive_9189ee6.json  mozjpeg-oxide_progressive_a7b2fee.json  mozjpeg-oxide_progressive_b9805cf.json  (+6 more)
