[package]
name = "mozjpeg-oxide"
version = "0.2.3"
edition = "2021"
rust-version = "1.89.0"
license = "BSD-3-Clause"
repository = "https://github.com/imazen/mozjpeg-oxide"
description = "Pure Rust JPEG encoder based on Mozilla's mozjpeg with trellis quantization"
homepage = "https://github.com/imazen/mozjpeg-oxide"
documentation = "https://docs.rs/mozjpeg-oxide"
readme = "README.md"
keywords = ["jpeg", "encoder", "mozjpeg", "compression", "image"]
categories = ["encoding", "multimedia::images"]
exclude = [
    "benchmark/",
    "corpus/",
    "crates/",
    "scripts/",
    "comparison_outputs/",
    ".github/",
    "tests/images/*.png",
]

[workspace]
members = ["crates/*"]

[features]
default = []
# Use hand-written SIMD intrinsics for ~15% better DCT/color performance.
# Without this, uses `multiversion` autovectorization (safe, ~87% of intrinsics perf).
simd-intrinsics = []
# Legacy alias
simd = ["simd-intrinsics"]
# Enable PNG loading in corpus module (enabled by default in dev)
png = ["dep:png"]
# Enables FFI comparison tests against local mozjpeg C source
__sys_local_available = []

[dependencies]
bytemuck = "1.14"
multiversion = "0.8.0"
# Optional PNG support for corpus loading
png = { version = "0.17", optional = true }
# Used by dct.rs and color.rs for portable SIMD
wide = "1.1.1"

[dev-dependencies]
dssim = "3.2"
rgb = "0.8"
ssimulacra2 = "0.5"
png = "0.17"
proptest = "1.4"
criterion = "0.5"
jpeg-decoder = "0.3"
libc = "0.2"
# Use existing mozjpeg-sys from crates.io for basic FFI validation
mozjpeg-sys = "2.2"
# Codec testing infrastructure (provides DSSIM, SSIMULACRA2, Butteraugli metrics, ICC support)
codec-eval = { git = "https://github.com/imazen/codec-eval", rev = "be389c2" }
# Note: sys-local is NOT included because it requires local mozjpeg C source.
# To run ffi_comparison tests locally, uncomment below:
sys-local = { path = "crates/sys-local" }
# Butteraugli perceptual image quality metric
butteraugli = "0.2"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[[bench]]
name = "encode"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"__sys_local_available\", \"ffi-test\"))"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
# Allow common patterns in test/example code
unnecessary_cast = "allow"
needless_borrows_for_generic_args = "allow"
needless_range_loop = "allow"
manual_div_ceil = "allow"
manual_range_contains = "allow"
expect_fun_call = "allow"
absurd_extreme_comparisons = "allow"
