[package]
name = "mozjpeg-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.89.0"
license = "BSD-3-Clause"
repository = "https://github.com/imazen/mozjpeg-rs"
description = "Pure Rust JPEG encoder based on Mozilla's mozjpeg with trellis quantization"
homepage = "https://github.com/imazen/mozjpeg-rs"
documentation = "https://docs.rs/mozjpeg-rs"
readme = "README.md"
keywords = ["jpeg", "encoder", "mozjpeg", "compression", "image"]
categories = ["encoding", "multimedia::images"]
exclude = [
    "benchmark/",
    "corpus/",
    "crates/",
    "scripts/",
    "comparison_outputs/",
    ".github/",
    "tests/images/*.png",
]

[workspace]
members = ["crates/*"]

[features]
default = []
# Use hand-written SIMD intrinsics for ~15% better DCT/color performance.
# Without this, uses `multiversion` autovectorization (safe, ~87% of intrinsics perf).
simd-intrinsics = []
# Legacy alias
simd = ["simd-intrinsics"]
# Enable PNG loading in corpus module (enabled by default in dev)
png = ["dep:png"]
# Enables granular FFI tests against instrumented C mozjpeg internals (DCT, quant, etc.)
# Requires imazen/mozjpeg fork with test exports at ../mozjpeg - use scripts/setup-instrumented-mozjpeg.sh
_instrument-c-mozjpeg-internals = ["dep:sys-local"]
# Enables mozjpeg-sys configuration: configure a C mozjpeg encoder from our Encoder
mozjpeg-sys-config = ["dep:mozjpeg-sys", "dep:libc"]

[dependencies]
bytemuck = "1.14"
multiversion = "0.8.0"
# Optional PNG support for corpus loading
png = { version = "0.17", optional = true }
# Used by dct.rs and color.rs for portable SIMD
wide = "1.1.1"
# Optional: mozjpeg-sys configuration (configure C encoder from our settings)
mozjpeg-sys = { version = "2.2", optional = true }
libc = { version = "0.2", optional = true }
# Optional: FFI comparison against local mozjpeg C source (requires ../mozjpeg)
sys-local = { path = "crates/sys-local", optional = true }

[dev-dependencies]
dssim = "3.2"
rgb = "0.8"
ssimulacra2 = "0.5"
png = "0.17"
proptest = "1.4"
criterion = "0.5"
jpeg-decoder = "0.3"
zune-jpeg = "0.4"
libc = "0.2"
# Use existing mozjpeg-sys from crates.io for basic FFI validation
mozjpeg-sys = "2.2"
# High-level mozjpeg wrapper for parity testing
mozjpeg = "0.10"
# Codec testing infrastructure (provides DSSIM, SSIMULACRA2, Butteraugli metrics, ICC support)
codec-eval = { git = "https://github.com/imazen/codec-eval", rev = "0ee46bc" }
# Butteraugli perceptual image quality metric
butteraugli = "0.3"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[[bench]]
name = "encode"
harness = false

# Examples that require instrumented C mozjpeg (sys-local crate)
[[example]]
name = "trace_pipeline"
required-features = ["_instrument-c-mozjpeg-internals"]

[[example]]
name = "quant_ffi_compare"
required-features = ["_instrument-c-mozjpeg-internals"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"_instrument-c-mozjpeg-internals\", \"ffi-test\"))"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
# Allow common patterns in test/example code
unnecessary_cast = "allow"
needless_borrows_for_generic_args = "allow"
needless_range_loop = "allow"
manual_div_ceil = "allow"
manual_range_contains = "allow"
expect_fun_call = "allow"
absurd_extreme_comparisons = "allow"
