[package]
name = "mozjpeg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust port of Mozilla's mozjpeg JPEG encoder with trellis quantization"

[features]
default = []
simd = []

[dependencies]
bytemuck = { workspace = true }

[dev-dependencies]
dssim = { workspace = true }
ssimulacra2 = { workspace = true }
png = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
jpeg-decoder = { workspace = true }
codec-eval = { workspace = true }
libc = "0.2"
# Use existing mozjpeg-sys from crates.io for basic FFI validation
mozjpeg-sys = "2.2"
# Local mozjpeg-sys with granular test exports for layer-by-layer validation
mozjpeg-sys-local = { path = "../mozjpeg-sys" }

[[bench]]
name = "encode"
harness = false
